cleans up some visual bugs and spacing. adds resume link

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@
   color: var(--dark-gray);
 }
 
+.nav-button {
+  all: unset;
+}
+
 /* hero */
 #hero {
   padding-top: 0;
@@ -71,7 +75,7 @@
 .typed {
   display: inline-flex;
   font-family: "Courier New", Courier, monospace;
-  font-size: 4.5rem;
+  font-size: 4rem;
   word-break: break-all;
   overflow: hidden;
   /* border-right: 0.05em solid var(--dark-gray); */
@@ -134,6 +138,7 @@
 .tech {
   margin: 5px;
   cursor: default;
+  transition: color 0.2s ease-out 100ms;
 }
 
 .tech:hover {
@@ -215,21 +220,18 @@
   background-color: var(--light-gray);
 }
 
+.modal-content {
+  background-color: var(--light-silver);
+  border-radius: 3px;
+}
+
+.modal-header {
+  border-bottom: none;
+}
+
 /* footer */
 #footer {
   min-height: 10vh;
   background-color: var(--dark-gray);
   color: var(--light-silver);
-}
-
-.modal-content {
-  background-color: var(--light-silver);
-}
-
-.modal-header {
-  border-bottom: 1px solid var(--dark-gray);
-}
-
-.modal-footer {
-  border-top: 1px solid var(--dark-gray);
 }
